Ensure new selected hints are visible in the drop down list.

--- a/src/AutoComplete.css
+++ b/src/AutoComplete.css
@@ -49,6 +49,7 @@
 
 .inputHint .hint{
    margin: 3px;
+   padding: .1em .4em;
    position: relative;
    display: block;
    cursor: pointer;
